# minimal-c2000-cmake

./: .gitignore  CMakeLists.txt  Makefile  README.md  c2000-toolchain.cmake  device_init.c  device_init.h  main.c
